--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@
  * User Manual available at https://docs.gradle.org/5.2.1/userguide/java_library_plugin.html
  */
 
-plugins {
+/*plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
    id 'eclipse'
@@ -39,7 +39,7 @@ dependencies {
     implementation 'com.relevantcodes:extentreports:2.40.2'
     implementation 'org.apache.poi:poi:3.9'
     implementation 'org.apache.poi:poi-ooxml:3.9'
-}
+}*/
 /* sourceSets {
     main {
         java {
@@ -47,6 +47,13 @@ dependencies {
         }
     }
 }  */
+
+dependencies {
+  providedCompile 'javax.servlet:servlet-api:2.5'
+  runtime 'javax.servlet:jstl:1.1.2'
+  testCompile group: 'org.testng', name: 'testng', version: '6.9.9'
+
+}
 def payment = project.hasProperty("payment")
 def sms = project.hasProperty("sms")
 
